# traffic-yolo-bytetrack

./: .gitignore  README.md  app.py  configurator.py  coordinate.py  detections.py  finetune.py  processor.py  pyproject.toml  sample.py  vision.py  zones.yaml
components/: CameraView.py  Navbar.py  Traffic.py  Zone.py
datasets/example/: README.md  data.yaml
datasets/example/train/labels/: frame_0_jpg.rf.9a43f541819c5d630e1c11cb0c3211ca.txt  frame_1011_jpg.rf.4ab2f31997b6d7c5d113eb4bf1c38ef4.txt  frame_1017_jpg.rf.2f1e522f849ed2cf6021b912bab265ed.txt  frame_1018_jpg.rf.5abf2045b93e2b1a4a359ce54b742a6d.txt
datasets/example/valid/labels/: frame_1101_jpg.rf.1740f936d3f72215da771d3ec6bf8471.txt  frame_1179_jpg.rf.4ac6cb2a95bf46c18f847ed046d96e6f.txt  frame_1236_jpg.rf.62a68f492601de2dcc88593bced8ef31.txt  frame_1237_jpg.rf.223ecc9f88ba6cb9db74087285c0c7ec.txt
pages/: home.py
