[project]
name = "traffic-yolo-bytetrack"
version = "0.1.0"
description = "Realtime traffic flow analysis with YOLOv8m + ByteTrack"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "ultralytics>=8.0.227,<8.2",
    "supervision>=0.17.1,<0.20",
    "opencv-python>=4.8,<4.10",
    "numpy>=1.26,<2",
    "torch>=2.1,<2.3",
    "torchvision>=0.16,<0.18",
    "dash>=2.14,<3",
    "dash-bootstrap-components>=1.5,<2",
    "plotly>=5.17,<6",
    "pyyaml>=6.0",
    "pandas>=2.1,<3",
    "flask>=2.2,<3",
]

[tool.uv]
package = false
